# lab08

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: docker-build.yml
formatter_ex_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt  hello_world.cpp
logs/: log.txt
solver_application/: CMakeLists.txt  equation.cpp
solver_lib/: CMakeLists.txt  solver.cpp
